Clean up and enhance index.html structure
Updated the HTML structure and content for the portfolio page.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
+
+
+Then the browser will show **the whole thing as text**, because those ``` backticks turn it into a code block in HTML.
+
+We need to clean that.
+
+### Fix it step by step:
+
+1. Go to the code page:  
+   👉 **https://github.com/jocowtree/jocowtree.github.io**
+
+2. Click on **`index.html`**
+
+3. Click the **pencil icon** (✏️) to edit.
+
+4. **Select everything** and delete it.
+
+5. Now paste this **clean HTML ONLY** (⚠️ do NOT include any ``` lines):
+
+```html
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
+  <meta charset="UTF-8" />
+  <title>My Portfolio – Decorator & Artist</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <h1>Hello!</h1>
-    <p>This is my portfolio website hosted on GitHub Pages.</p>
+  <h1>Hello, I'm a Decorator & Artist</h1>
+  <p>This is my portfolio website. Real layout coming soon!</p>
 </body>
 </html>
